configurable auto publish for CCVs

--- a/sat.cfg
+++ b/sat.cfg
@@ -392,6 +392,9 @@ container_ceph_prefix=rhceph
 container_repo=rhosp13
 org=ESS
 ak_sub=OpenStack
+# Autopublish CCVs?
+# This isn't required because when we regenerate CCVs, forge publishes them
+auto_publish=False
 
 [cvs-OSP16.1]
 tag=ESS
@@ -407,6 +410,9 @@ container_repo=rhosp-rhel8
 org=ESS
 ak_sub=OpenStack
 latest_tag=16.1.2
+# Autopublish CCVs?
+# This isn't required because when we regenerate CCVs, forge publishes them
+auto_publish=False
 
 # Zdates to use when creating CVs filters
 # This has to be placed after the CVS sections
